Add GitHub Actions CI workflow with unit tests and ML smoke test

--- a/.gitignore
+++ b/.gitignore
@@ -94,6 +94,8 @@ runs/*/
 *.json
 !configs/*.yaml
 !schema.json
+!tests/fixtures/*.csv
+!tests/fixtures/*.json
 
 # =========================
 # Logs
